--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,7 +228,7 @@ h3 {
   padding: 0 5%;
   /* Imagen de fondo con overlay oscuro */
   background-image: linear-gradient(rgba(10, 25, 49, 0.4), rgba(10, 25, 49, 0.6)), 
-                    url('/public/images/fondo-portada.jpg'); 
+                    url('./images/fondo-portada.jpg'); 
   background-position: center center;
   background-size: cover;
 }
